--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "front-matter": "1.0.0",
     "history": "1.10.1",
     "jade": "1.11.0",
+    "lodash": "^3.10.1",
     "normalize.css": "3.0.3",
     "react": "0.14.0-rc1",
     "react-dom": "0.14.0-rc1",
